--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ jellyfish
 numpy
 azure-ai-formrecognizer==3.1.0b3
 datetime
+pytest
 spacy
-#./assets/spacy/en_core_web_sm-3.0.0.tar.gz
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
