--- a/.funcignore
+++ b/.funcignore
@@ -1,16 +1,30 @@
+# Local files
 .git*
 .vscode
 local.settings.json
-test
+
+# Tests
+tests/
+
+# Virtual Environments
 .venv
 venv
+
+# Streamlit Dashboard
 dashboard/
-tests/
+
+# Assets
 assets/img/
 assets/postman_collection/
 assets/luis/
+
+# Configs
 config.ini
 config.sample.ini
 deploy.ps1
-README.md
-GET_YOUR_KEYS.md
+appsettings.sample.json
+appsettings.json
+
+# Documentation
+*.md
+docs/
