--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,12 @@ spacy
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
 edit_distance
 
+# validate_full_address
+pandas
+
+# validate_iban
+
+
 # libvin
 requests
 requests_cache
