--- a/manifest.json
+++ b/manifest.json
@@ -2,45 +2,45 @@
     "Authenticator": {
         "attributes": {
             "Id": {
-                "required": true,
-                "preprocess": true,
-                "exact_match": true
+                "required":     true,
+                "preprocess":   true,
+                "exact_match":  true
             },
             "Firstname": {
-                "required": false,
-                "preprocess": true,
-                "exact_match": false,
+                "required":     false,
+                "preprocess":   true,
+                "exact_match":  false,
                 "max_distance": 2
             },
             "Lastname": {
-                "required": false,
-                "preprocess": true,
-                "exact_match": false,
+                "required":     false,
+                "preprocess":   true,
+                "exact_match":  false,
                 "max_distance_levenshtein": 1,
-                "max_distance_damerau": 1,
-                "max_distance_jaro": 0.9
+                "max_distance_damerau":     1,
+                "max_distance_jaro":        0.9
             },
             "Birthdate": {
-                "required": false,
-                "preprocess": false,
-                "exact_match": true
+                "required":     false,
+                "preprocess":   false,
+                "exact_match":  true
             },
             "PIN": {
-                "required": false,
-                "preprocess": true,
-                "exact_match": true
+                "required":     false,
+                "preprocess":   true,
+                "exact_match":  true
             },
             "ContractNumber": {
-                "required": false,
-                "preprocess": true,
-                "exact_match": true,
-                "structure": "[A-Z]{1,2}[0-9]{3}"
+                "required":     false,
+                "preprocess":   true,
+                "exact_match":  true,
+                "structure":    "[A-Z]{1,2}[0-9]{3}"
             }
 
         },
         "config": {
-            "min_attributes": 3,
-            "use_db": true,
+            "min_attributes":   3,
+            "use_db":           true,
             "local_data_path": ""
         }
     },
@@ -52,7 +52,7 @@
                         "length": 22
                     },
                     "DK": {
-                        "length": 21
+                        "length": 22
                     }
                 },
                 "value_is_mandatory": {
@@ -60,27 +60,36 @@
                 }
             },
             "address": {
-                "DE": {
+                "locales": {
+                    "DE": {},
+                    "DK": {}
+                },
+                "value_is_mandatory": {
+                    "zip":      true,
+                    "city":     true,
+                    "street":   true,
+                    "number":   false
                 }
             },
             "street_in_city": {
-                "DE": {
+                "locales": {
+                    "DE": {},
+                    "DK": {}
                 },
                 "value_is_mandatory": {
-                    "zip": true,
-                    "city": true
+                    "zip":      true,
+                    "street":   true,
+                    "number":   false
                 }
             },
             "zip": {
                 "locales": {
-                    "DE": {
-                    },
-                    "DK": {
-                    }
+                    "DE": {},
+                    "DK": {}
                 },
                 "value_is_mandatory": {
-                    "zip": true,
-                    "city": true
+                    "zip":      true,
+                    "city":     true
                 }
             }
         },
