Updated appsettings matching to newest structure

--- a/appsettings.sample.json
+++ b/appsettings.sample.json
@@ -1,11 +1,22 @@
 {
-    "AZURE_BLOB_CONTAINER":"",
-    "AZURE_TABLE_NAME":"",
-    "AZURE_STORAGE_CONNECTION_STRING":"",
-    "APP_USER":"",
-    "APP_PASSWORD":"",
-    "LUIS_APP_ID_DE":"",
-    "LUIS_ENDPOINT_DE":"u",
-    "LUIS_KEY_DE":"",
-    "LUIS_SLOT_DE":""
+    "ATTRIBUTE_VALIDATOR_CONNECTION_STRING":"",
+    "AUTHENTICATOR_CONNECTION_STRING":"",
+    "FORM_RECOGNIZER_NAME":"",
+    "FORM_RECOGNIZER_KEY":"",
+    "FORM_RECOGNIZER_TABLE_NAME":"",
+    "FORM_RECOGNIZER_CONNECTION_STRING":"",
+    "FORM_RECOGNIZER_RETURN_KEYS":"",
+    "LICENSE_PLATE_RECOGNIZER_LUIS_ID_DE":"",
+    "LICENSE_PLATE_RECOGNIZER_LUIS_KEY_DE":"",
+    "LICENSE_PLATE_RECOGNIZER_LUIS_PREDICTION_ENDPOINT_DE":"",
+    "LICENSE_PLATE_RECOGNIZER_LUIS_SLOT_DE":"",
+    "LICENSE_PLATE_RECOGNIZER_LUIS_ID_EN":"",
+    "LICENSE_PLATE_RECOGNIZER_LUIS_KEY_EN":"",
+    "LICENSE_PLATE_RECOGNIZER_LUIS_PREDICTION_ENDPOINT_EN":"",
+    "LICENSE_PLATE_RECOGNIZER_LUIS_SLOT_EN":"",
+    "TABLE_REQUESTOR_CONNECTION_STRING":"",
+    "VIN_RESOLVER_LUIS_ID_DE":"",
+    "VIN_RESOLVER_LUIS_KEY_DE":"",
+    "VIN_RESOLVER_LUIS_PREDICTION_ENDPOINT_DE":"",
+    "VIN_RESOLVER_LUIS_SLOT_DE":""
 }
