--- a/manifest.json
+++ b/manifest.json
@@ -36,7 +36,6 @@
                 "exact_match":  true,
                 "structure":    "[A-Z]{1,2}[0-9]{3}"
             }
-
         },
         "config": {
             "min_attributes":   3,
@@ -93,6 +92,24 @@
                 }
             }
         },
+        "config": {
+            "use_db": true,
+            "local_data_path": ""
+        }
+    },
+    "FormRecognizer": {
+        "config": {
+            "use_db": true,
+            "local_data_path": ""
+        }
+    },
+    "LicensePlateRecognizer": {
+        "config": {
+            "use_db": false,
+            "local_data_path": ""
+        }
+    },
+    "TableRequestor": {
         "config": {
             "use_db": true,
             "local_data_path": ""
