--- a/requirements.txt
+++ b/requirements.txt
@@ -2,25 +2,24 @@
 # The Python Worker is managed by Azure Functions platform
 # Manually managing azure-functions-worker may cause unexpected issues
 
+# Base packages and testing
 azure-functions
+ddt
+pytest
+
+# Infrastructure
 azure-storage-blob
 azure-cosmosdb-table
-jellyfish
-numpy
 azure-ai-formrecognizer==3.1.0b3
+
+# Processing
+numpy
 datetime
-pytest
+edit_distance
+jellyfish
+nose
 spacy
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
-edit_distance
-
-# validate_full_address
 pandas
-
-# validate_iban
-
-
-# libvin
 requests
 requests_cache
-nose
