--- a/.github/tests.yml
+++ b/.github/tests.yml
@@ -2,7 +2,7 @@ name: Run tests
 on:
   push:
     branches:
-      - "main"
+      - "feature/systematic_unit_testing"
   pull_request:
     branches:
       - "main"
