--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,12 +30,9 @@ jobs:
         run: python -c "import sys; print(sys.version)"
         # Install the package using the setup.py
       - name: Install package
-        run: pip install -r requirements.txt
-        # Install pytest (you can use some other testing utility)
-      - name: Install pytest
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install -r requirements.txt
         # Run the tests. I'm using pytest and the file is in the tests directory.
       - name: Run tests
         run: pytest tests/test_AttributeValidator.py
