--- a/.github/workflows/unit_testing.yml
+++ b/.github/workflows/unit_testing.yml
@@ -1,8 +1,8 @@
-name: Run tests
+name: Unit Testing
 on:
   push:
     branches:
-      - "feature/systematic_unit_testing"
+      - "main"
   pull_request:
     branches:
       - "main"
@@ -34,5 +34,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
         # Run the tests. I'm using pytest and the file is in the tests directory.
-      - name: Run tests
+      - name: Run unit tests
         run: pytest tests/test_AttributeValidator.py
