Temporary feature branch run

--- a/.github/workflows/unit_testing.yml
+++ b/.github/workflows/unit_testing.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - "main"
+      - "feature/systematic_unit_testing"
   pull_request:
     branches:
       - "main"
