--- a/.github/workflows/deployment_workflow.yml
+++ b/.github/workflows/deployment_workflow.yml
@@ -1,19 +1,17 @@
-# Only trigger, when the build workflow succeeded
+# Run deployment to production after successful unit tests
 name: Deployment to Azure Function
 on:
-  workflow_run:
-    workflows: ["Unit Testing"]
-    types:
-      - completed
   push:
     branches:
       - "main"
 
+# Set environment variables
 env:
-  AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTIONAPP_NAME }} # set this to your application's name
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'   # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_NAME: ${{ secrets.AZURE_FUNCTIONAPP_NAME }}
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.'
   PYTHON_VERSION: '3.9'
 
+# Run deployment job
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -22,11 +20,13 @@ jobs:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@master
 
+    # Setup Python environment
     - name: Setup Python ${{ env.PYTHON_VERSION }} Environment
       uses: actions/setup-python@v1
       with:
         python-version: ${{ env.PYTHON_VERSION }}
 
+    # Collect required packages
     - name: 'Resolve Project Dependencies Using Pip'
       shell: bash
       run: |
@@ -34,6 +34,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt --target=".python_packages/lib/site-packages"
         popd
+      
+    # Run function deployment
     - name: 'Run Azure Functions Action'
       uses: Azure/functions-action@v1
       id: fa
