--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,8 +2,13 @@
 # https://github.com/Azure/azure-functions-docker/blob/dev/host/3.0/buster/amd64/python/python38/python38-core-tools.Dockerfile
 FROM mcr.microsoft.com/azure-functions/python:3.0-python3.8-core-tools
 
+RUN apt update
+RUN apt install npm
+RUN npm install -g newman
+
 COPY requirements.txt .
 RUN pip install -r requirements.txt
+RUN npm install -g newman-reporter-htmlextra
 
 RUN pip install jupyter
 
