--- a/config.sample.ini
+++ b/config.sample.ini
@@ -1,15 +1,35 @@
-[luis]
-appid=
-key=
-prediction_endpoint=
-slot=
+[ATTRIBUTE_VALIDATOR]
+CONNECTION_STRING=""
 
-[formrec]
-name=
-key=
-FR_TABLE_NAME=
-FR_STORAGE_CONNECTION_STRING=""
+[AUTHENTICATOR]
+CONNECTION_STRING=""
+
+[FORM_RECOGNIZER]
+NAME=
+KEY=
+TABLE_NAME=
+CONNECTION_STRING=
 FR_RETURN_KEYS=
 
-[userdata]
-USER_STORAGE_CONNECTION_STRING=""
+[LICENSE_PLATE_RECOGNIZER]
+LUIS_ID_DE=
+LUIS_KEY_DE=
+LUIS_PREDICTION_ENDPOINT_DE=# Make sure you use the full domain name, e.g. westeurope.api.cognitive.microsoft.com/
+LUIS_SLOT_DE=
+LUIS_ID_EN=
+LUIS_KEY_EN=
+LUIS_PREDICTION_ENDPOINT_EN=# Make sure you use the full domain name, e.g. westeurope.api.cognitive.microsoft.com/
+LUIS_SLOT_EN=
+
+[TABLE_REQUESTOR]
+CONNECTION_STRING=""
+
+[VIN_RESOLVER]
+LUIS_ID_DE=
+LUIS_KEY_DE=
+LUIS_PREDICTION_ENDPOINT_DE=# Make sure you use the full domain name, e.g. westeurope.api.cognitive.microsoft.com/
+LUIS_SLOT_DE=
+LUIS_ID_EN=
+LUIS_KEY_EN=
+LUIS_PREDICTION_ENDPOINT_EN=# Make sure you use the full domain name, e.g. westeurope.api.cognitive.microsoft.com/
+LUIS_SLOT_EN=
