Changes Spellingresolver Test and added to UnitTesting.yml

--- a/.github/workflows/unit_testing.yml
+++ b/.github/workflows/unit_testing.yml
@@ -37,6 +37,8 @@ jobs:
           pip install -r requirements.txt
       # Run the tests. I'm using pytest and the file is in the tests directory.
       - name: Run unit tests
-        run: pytest tests/test_AttributeValidator.py
-        run: pytest tests/test_SpellingResolver.py
-        run: pytest tests/test_HealthCheck.py
+        run: |
+          pytest tests/test_AttributeValidator.py
+          pytest tests/test_SpellingResolver.py
+          pytest tests/test_HealthCheck.py
+          
