New brach email with all changes

--- a/manifest.json
+++ b/manifest.json
@@ -90,6 +90,17 @@
                     "zip":      true,
                     "city":     true
                 }
+            },
+            "email": {
+                "locales": {
+                    "DE": {}
+                },
+                "region": {
+                    "DE": {}
+                },
+                "value_is_mandatory": {
+                    "query":      true
+                }
             }
         },
         "config": {
