--- a/.github/workflows/api_tests.yml
+++ b/.github/workflows/api_tests.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   test-api:
     runs-on: ubuntu-latest
+    environment: UnitTesting
     steps:
     - uses: actions/checkout@v2
       
